EPMRPP-78109 || fix spacing, provide new checkbox flow to attributes

--- a/app/src/pages/inside/projectSettingsPageContainer/content/notifications/modals/addEditNotificationModal/addEditNotificationModal.scss
+++ b/app/src/pages/inside/projectSettingsPageContainer/content/notifications/modals/addEditNotificationModal/addEditNotificationModal.scss
@@ -63,6 +63,6 @@
   }
 }
 
-.attributes {
-  margin: 8px 0 0 0;
+.attributes-list {
+  margin-top: 8px;
 }
